--- a/TODO.adoc
+++ b/TODO.adoc
@@ -1,5 +1,6 @@
 = TODO
 
+* add Network ACLs
 * create and allocate an EBS volume for the Jenkins master
 * Dynamically configure AWS EC2 Jenkins master plugin (see init.groovy)
 * create a bastion machine to config-manage others machines using Ansible => disable ssh access to jenkins master
